XMLtoCSV/objects/unpackaged/objects/PCYC_JBI_Call_Key_Message__c.object
<CustomObject>
    <description>Staging JBI Call Key Message records.</description>
    <fields>
        <fullName>PCYC_Call_Source__c</fullName>
        <description>Call Source.</description>
        <label>Call Source</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Del_Flg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete Flag, default flase.</description>
        <label>Delete Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Call ( JBI Call Key Message record Id)</description>
        <externalId>true</externalId>
        <label>JBI Call Key Message Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_JBI_Call_ref__c</fullName>
        <label>JBI Call</label>
        <referenceTo>PCYC_JBI_Call__c</referenceTo>
        <relationshipLabel>Call Key Messages</relationshipLabel>
        <relationshipName>PCYC_JBI_Call_Key_Message</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCYC_Key_Message__c</fullName>
        <description>Key Message</description>
        <label>Key Message</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Product__c</fullName>
        <description>Product</description>
        <label>Product</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Staging JBI Call Key Message</label>
    <nameField>
        <label>JBI Call Key Message</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging JBI Call Key Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>